--- a/YoutubeReviews/local.properties
+++ b/YoutubeReviews/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 07 09:10:41 CET 2022
-sdk.dir=/Volumes/Memoria Principale/Applications/sdk
+#Wed Nov 09 23:15:48 CET 2022
+sdk.dir=C\:\\Users\\utente\\AppData\\Local\\Android\\Sdk
