Settings Activity -> implementation profile image update Profile Image Activity -> definition of a new intent extra to define sending activity Sign In Actiity -> new intent extra

--- a/YoutubeReviews/local.properties
+++ b/YoutubeReviews/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 17 09:29:49 CET 2022
-sdk.dir=/Volumes/Memoria Principale/Applications/sdk
+#Sat Nov 19 10:39:34 CET 2022
+sdk.dir=C\:\\Users\\utente\\AppData\\Local\\Android\\Sdk
