--- a/YoutubeReviews/local.properties
+++ b/YoutubeReviews/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat Nov 19 10:39:34 CET 2022
-sdk.dir=C\:\\Users\\utente\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Volumes/Memoria Principale/Applications/sdk
